# webrtc

my-info/: build_android_aar.sh
my-info/aec3_build/: CMakeLists.txt
my-info/aec3_build/android_project/: CMakeLists.txt  build.gradle
my-info/aec3_build/android_project/app/src/main/java/cn/watchfun/webrtc/: AEC3Helper.java  WebRTCAEC3.java
my-info/aec3_build/android_project/app/src/main/java/com/webrtc/aec3/: AEC3Helper.java
my-info/aec3_build/build_arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
my-info/aec3_build/build_armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
my-info/aec3_build/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
my-info/aec3_build/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
my-info/aec3_build/include/: webrtc_aec3_processor.h
my-info/aec3_build/jni/: webrtc_aec3_jni.cpp  webrtc_aec3_jni.h
my-info/aec3_build/src/: webrtc_aec3_processor.cpp
my-info/android_output/: README-INTEGRATION.md  webrtc-aec3-android.aar
my-info/android_output/aar/: AndroidManifest.xml
my-info/android_output/aar/classes/com/webrtc/aec3/: WebRTCAEC3.java
my-info/logs/: 1  my-req.txt
my-info/reference-doc/: 1.txt  2.txt
